@@ -1,18 +1,50 @@
+import itertools
+
 from AccessControl.SecurityManagement import getSecurityManager
 from Acquisition import aq_base
 from plone.app.workflow.browser.sharing import SharingView
 from plone.uuid.interfaces import IUUID
 from zope.component import queryUtility
+from zope.component.hooks import getSite
 
 from collective.teamwork.interfaces import IProjectContext
-from collective.teamwork.utils import request_for
+from collective.teamwork.utils import request_for, get_workspaces
+from collective.teamwork.utils import group_workspace
 from config import APP_ROLES
-from collective.teamwork.user.interfaces import IWorkgroupTypes
+from collective.teamwork.user.interfaces import IWorkgroupTypes, ISiteMembers
+from collective.teamwork.user.interfaces import IWorkspaceRoster
 
 
 def authenticated_user(site):
     user = aq_base(getSecurityManager().getUser())
     return user.__of__(site.acl_users) if user is not None else None
+
+
+def user_workspaces(username, context=None):
+    """
+    Get workspaces for username, matching only workspaces for which
+    the given user is a member; may be given context or use the
+    site root as default context.
+    """
+    suffix = '-viewers'
+    site = getSite()
+    context = context or site
+    # get all PAS groups for workspaces contained within context:
+    all_workspaces = get_workspaces(context)
+    _pasgroup = lambda g: g.pas_group()
+    _wgroups = lambda w: map(_pasgroup, IWorkspaceRoster(w).groups.values())
+    local_groups = set(
+        zip(*itertools.chain(*map(_wgroups, all_workspaces)))[0]
+        )
+    if not local_groups:
+        return []
+    # get all '-viewers' groups user belongs to, intersect with local:
+    user = ISiteMembers(site).get(username)
+    usergroups = [name for name in user.getGroups() if name.endswith(suffix)]
+    considered = [name for name in local_groups.intersection(usergroups)]
+    # each considered group (by suffix convention) is always 1:1 with
+    # workspaces, no dupes, so we can map those workspaces:
+    return map(group_workspace, set(considered))
 
 
 class LocalRolesView(SharingView):
